FIX: scroll bar overflow

--- a/src/components/CategoryPage/styles.scss
+++ b/src/components/CategoryPage/styles.scss
@@ -88,6 +88,13 @@
         }
       }
     }
+
+    // Element 2 : Advices
+    .advices {
+      &-list {
+        overflow: hidden;
+      }
+    }
   }
 
   // RESPONSIVE LG +1024 =======================================================
